p2/manifests/app1/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
spec:
  selector:
    matchLabels:
      app: hello-world
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-kubernates
        image: paulbouwer/hello-kubernetes:1.7
        ports:
        - containerPort: 8080
